JMX and SAX application 2 attempt fixed JMX